# web-search-chunk

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  e2e_test.py  e2e_test_mock.py  main.py  pyproject.toml  run.sh  setup.sh  test.sh  test_contextual_chunking.py  test_tavily_api.py
src/: __init__.py  main.py
src/adapters/: __init__.py  chunking_adapter.py  crawling_adapter.py  llm_adapter.py  persistent_store_adapter.py  reranking_adapter.py  retrieval_adapter.py  vector_store_adapter.py  web_search_adapter.py
src/core/: models.py  pipeline.py
src/utils/: __init__.py  logger.py
tests/: mocks.py  test_adapters.py  test_dependency_injection.py  test_integration.py  test_models.py  test_pipeline.py
